# hackathon-II-todo-app

./: .dockerignore  .gitignore  .npmignore  AGENTS.md  BETTER_AUTH_IMPLEMENTATION.md  CLAUDE.md  CURRENT_STATUS.md  DEPLOY_NOW.md  FIXES_SUMMARY.md  GEMINI.md  Hackathon II - Todo Spec-Driven Development (1).md  IMPLEMENTATION_PLAN.md  QWEN.md  README.md  REMAINING_FEATURES_SPEC.md  SPEC_QUICK_REFERENCE.md  chatkit.md  discussedplan.md  docker-compose.yml  error.md  package.json  token.txt
.claude/agents/: constitution-writer.md  spec-architect.md
.claude/commands/: sp.autopilot.md
.gemini/: settings.json
.specify/memory/: constitution.md
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  test.db
backend/alembic/: env.py
backend/alembic/versions/: 235c26e8b87a_initial_migration_with_users_tasks_tags_.py  289315d71f63_add_performance_indexes_for_task_.py  64209b51956d_add_missing_indexes_and_fix_constraints.py  89c704a27f92_add_recurring_task_support_fields.py
backend/src/: main.py
backend/src/core/: config.py  database.py  dependencies.py  exceptions.py  logging_config.py  security.py  vapid.py
backend/src/models/: __init__.py  category.py  tag.py  task.py  task_order.py  task_tag_link.py  user.py  user_subscription.py
backend/src/routers/: analytics.py  auth.py  categories.py  tags.py  tasks.py  users.py
backend/src/schemas/: category.py  reminder.py  tag.py  task.py  user.py
backend/src/services/: auth_service.py  tag_service.py  task_service.py
backend/src/utils/: timezone_utils.py
backend/tests/: README.md  conftest.py  run_tests.py  test_auth.py  test_db_connection.py  test_models.py  test_tags.py  test_user_profile.py  test_utils.py
design/: figma.md
docs/: ASHBURN_QUICK_START.md  DAPR_MCP_OKE_DEPLOYMENT_PLAN.md  DEPLOYMENT_STATUS.md  MIGRATION_CHECKLIST.md  OKE_DEPLOYMENT_PLAN_FREE_TIER.md  OKE_MANUAL_SETUP_GUIDE.md  PHASE_V_FEATURE_BREAKDOWN.md  PHASE_V_IMPLEMENTATION_PLAN.md  QUICK_ACTION_GUIDE.md  dapr_architecture_services.md  dapr_e2e_test_results.md  dapr_implementation_complete.md  dapr_implementation_status.md  dapr_integration.md  dapr_mvp_test_results.md  dapr_test_results.md  feature1.md  feature2.md  feature3.md  feature4.md  fet.md  implementation-complete.md  phase-iv-implementation-plan.md  phaseIII-implementation-plan.md  plan.md  redpanda-switch-guide.md  test_dapr_e2e.py  test_dapr_state.py
docs/adapter/: adapter-approach-detailed.md  chatkit-adapter-implementation-summary.md  chatkit-adapter-quickstart.md
example/: 1step.md  2step.md
frontend/: CLAUDE.md  Dockerfile  README.md  next.config.ts  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts
phaseI/: README.md  pyproject.toml
phaseI/src/models/: task.py
phaseI/src/ui/: prompts.py
phaseI/tests/integration/: test_add_task_flow.py  test_delete_task_flow.py  test_mark_complete_flow.py
phaseI/tests/unit/: test_main.py  test_task_model.py  test_validation.py
phaseII/: .gitignore  README.md  docker-compose.yml
phaseIII/: .env.example  .gitignore  DOCKER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  docker-compose.yml
phaseIV/: docker-compose.yml
phaseV/: DEPLOYMENT_GUIDE_OCI_MINIMAL.md  MIGRATION_SUMMARY.md  QUICK_DEPLOY.md  README.md  SECRET_FILES_ANALYSIS.md
phaseV/backend/: .env.example  =0.26.0  Dockerfile  Dockerfile.email-delivery  SECURITY_AUDIT.md  check_october_tasks.py  publish_reminder_event.py  pyproject.toml  run_mcp_server.sh  test_complete_task.py  test_complete_via_service.py  test_consumer_load.py  test_e2e_email_reminder.py  test_e2e_events.py  test_email_sending.py  test_email_service.py  test_recurring_flow.py  test_schema_fix.py  test_smtp_direct.py
phaseV/backend/alembic/versions/: dd759de1dae9_add_advanced_task_fields_and_tables.py
phaseV/backend/app/: config.py  database.py  main.py
phaseV/backend/app/chatkit/: __init__.py  context_aware_mcp.py  middleware.py  postgres_store.py  task_server.py
phaseV/backend/app/dapr/: client.py  jobs.py  pubsub.py  state.py
phaseV/backend/app/kafka/: __init__.py  config.py  events.py  producer.py
phaseV/backend/app/mcp/: server.py  standalone.py  tools.py
phaseV/backend/app/models/: category.py  conversation.py  tag.py  task.py  task_tag.py
phaseV/backend/app/routers/: __init__.py  events.py  jobs.py
phaseV/backend/app/schemas/: category.py  chat.py  tag.py  task.py
phaseV/backend/app/services/: __init__.py  category_service.py  conversation_service.py  email_delivery_service.py  email_delivery_service_standalone.py  message_service.py  notification_service.py  notification_service_standalone.py  recurring_task_service.py  recurring_task_service_standalone.py  search_service.py  tag_service.py  task_service.py
phaseV/backend/app/utils/: rrule_parser.py
phaseV/backend/scripts/: dev-backend.sh  export_openapi.py
phaseV/backend/tests/legacy/: test_mcp_tools.py
planning/: chatbotplanning.md  feature3.md
resources/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY_PHASE_8_9.md  REMAINING_FEATURES_SPEC.md  planning.md
scripts/: check-deployment-status.sh  configure-kubectl.sh  create-arm-nodepool-corrected.sh  create-arm-nodes.sh  create-oke-cluster.sh  deploy-ashburn.sh
(+660 files in other folders)
